--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
+    "@radix-ui/react-toast": "^1.2.4",
     "@vercel/postgres": "^0.10.0",
     "better-sqlite3": "^11.5.0",
     "chart.js": "^4.4.7",
@@ -36,8 +36,9 @@
     "framer-motion": "^11.11.10",
     "lucide-react": "^0.447.0",
     "next": "14.2.14",
+    "next-themes": "^0.4.4",
     "react": "^18",
-    "react-chartjs-2": "^5.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
